[package]
name = "cash-relay"
version = "0.2.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Cash:web Relay is a end-to-end encrypted message relay server"

[features]
monitoring = ["prometheus", "prometheus-static-metric"]

[dependencies]
base64 = "0.12.3"
bitcoincash-addr = "0.5.2"
bytes = "0.5.5"
cashweb = "0.1.0-alpha.4"
clap = { version = "2.33.1", features = ["yaml"] }
config = "0.10.1"
dashmap = "3.11.7"
dirs = "3.0.1"
futures = "0.3.5"
hex = "0.4.2"
http = "0.2.1"
lazy_static = "1.4.0"
log = "0.4.8"
pretty_env_logger = "0.4.0"
prost = "0.6.1"
prometheus = { version = "0.9.0", optional = true }
prometheus-static-metric = { version = "0.2.0", optional = true }
ripemd160 = "0.9.1"
rocksdb = "0.14.0"
ring = "0.16.15"
serde = { version = "1.0.114", features = ["derive"] }
subtle = "2.2.3"
tokio = { version = "0.2.21", features = ["blocking",  "macros", "rt-core", "rt-threaded", "sync", "time"] }
url = "2.1.1"
warp = "0.2.3"

[dev-dependencies]
ring = "0.16.15"
