[package]
name = "cash-relay"
version = "0.2.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Cash:web Relay is a end-to-end encrypted message relay server"

[features]
monitoring = ["prometheus", "prometheus-static-metric"]

[dependencies]
base64 = "0.13.0"
bitcoincash-addr = "0.5.2"
bytes = "0.5.6"
cashweb = "0.1.0-alpha.9"
clap = { version = "2.33.3", features = ["yaml"] }
config = "0.10.1"
dashmap = "3.11.10"
dirs = "3.0.1"
futures = "0.3.6"
hex = "0.4.2"
http = "0.2.1"
lazy_static = "1.4.0"
prost = "0.6.1"
prometheus = { version = "0.10.0", optional = true }
prometheus-static-metric = { version = "0.4.0", optional = true }
ripemd160 = "0.9.1"
rocksdb = "0.15.0"
ring = "0.16.15"
serde = { version = "1.0.116", features = ["derive"] }
subtle = "2.3.0"
thiserror = "1.0.21"
tracing = "0.1.21"
tracing-subscriber = "0.2.13"
tokio = { version = "0.2.22", features = ["blocking",  "macros", "rt-core", "rt-threaded", "sync", "time"] }
url = "2.1.1"
warp = "0.2.5"

[dev-dependencies]
ring = "0.16.15"
