[package]
name = "cash-relay"
version = "0.2.0"
authors = ["Harry Barber <harrybarber@protonmail.com>"]
edition = "2018"
description = "Cash:web Relay is a end-to-end encrypted message relay server"

[features]
monitoring = ["prometheus", "prometheus-static-metric"]

[dependencies]
async-stream = "0.3.0"
base64 = "0.13.0"
bitcoincash-addr = "0.5.2"
bytes = "1.0.1"
cashweb = { path = "../lib/cashweb" }
clap = { version = "2.33.3", features = ["yaml"] }
config = "0.10.1"
dashmap = "4.0.2"
dirs = "3.0.1"
futures = "0.3.12"
hex = "0.4.2"
http = "0.2.3"
lazy_static = "1.4.0"
prost = "0.7.0"
prometheus = { version = "0.11.0", optional = true }
prometheus-static-metric = { version = "0.5.1", optional = true }
ripemd160 = "0.9.1"
rocksdb = "0.15.0"
ring = "0.16.19"
serde = { version = "1.0.123", features = ["derive"] }
subtle = "2.4.0"
thiserror = "1.0.23"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tokio = { version = "1.1.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tokio-postgres = "0.7.2"
tokio-stream = "0.1.2"
pin-project = "1.0.4"
url = "2.2.0"
warp = "0.3.0"

[dev-dependencies]
ring = "0.16.19"
